--- a/css/style.css
+++ b/css/style.css
@@ -536,28 +536,22 @@ a {
   width: 21px;
   height: 22px;
 
+  background: url("../img/calendar.svg") no-repeat center;
   background-color: transparent;
   border: none;
   position: absolute;
-  bottom: 4px;
-  right: 5px;
+  bottom: 10px;
+  right: 8px;
   z-index: 1;
 }
 
-.btn-calend svg {
-  position: absolute;
-  bottom: 4px;
-  right: 5px;
-  z-index: 1;
-}
-
-.btn-calend path:hover,
-.btn-calend path:focus {
-  fill: #000000;
+.btn-calend:hover,
+.btn-calend:focus {
+  background: url("../img/calendar_focus.svg") no-repeat center;
 }
 
 .btn-calend path:active {
-  fill: #81B3D2;
+  background: url("../img/calendar_active.svg") no-repeat center;
 }
 
 .btn-count {
