--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ a {
   position: absolute;
   top: 86px;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   display: block;
 }
 
@@ -575,9 +575,20 @@ a {
   height: 597px;
 }
 
-.map img {
-  width: 1200px;
-  height: 597px;
+.map p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+
+  margin: 0;
+}
+
+.map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
 }
 
 /* Footer
@@ -609,7 +620,7 @@ footer {
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 footer p {
