--- a/css/style.css
+++ b/css/style.css
@@ -342,66 +342,12 @@ a {
   padding-top: 23px;
 }
 
-/* Button
-=============== */
-
-.btn {
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 26px;
-  text-transform: uppercase;
-  text-align: center;
-  color: #FFFFFF;
-  word-wrap: break-word;
-
-  display: block;
-}
-
-.btn-brown {
-  background-color: #766357;
-
-  width: 568px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin: 0 auto;
-}
-
-.btn-brown:hover,
-.btn-brown:focus {
-  background-color: #604E43;
-}
-
-.btn-brown:active {
-  background-color: #503E33;
-  color: #847870;
-}
-
-
-.btn-blue {
-  background-color: #81B3D2;
-
-  width: 458px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  margin: 25px auto 0;
-  margin-bottom: 0;
-}
-
-.btn-blue:hover,
-.btn-blue:focus {
-  background-color: #669EC0;
-}
-
-.btn-blue:active {
-  background-color: #5496BD;
-  color: #87B5D0;
-}
-
 /* Search */
 
 .search {
   background-color: #FFFFFF;
   width: 1200px;
+  z-index: 5;
 }
 
 .search-text {
@@ -426,26 +372,63 @@ a {
 }
 
 .search-box {
-  position: relative;
   width: 568px;
   margin: 0 auto;
 }
 
+.map {
+  width: 1200px;
+  height: 597px;
+  position: relative;
+}
+
+.map img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+
+  margin: 0;
+}
+
+.map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+}
+
+.floatUp {
+  animation-name: floatUp;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+.floatDown {
+  animation-name: floatDown;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
 @keyframes floatUp {
-  0%{
-    transform: translateY(-86px) scale(0) ;
+  from {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
   }
-  100% {
-    transform: translateY(0px) scale(1);
+  to {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
 @keyframes floatDown {
-  0%{
-    transform: translateY(0px) scale(1) ;
+  from {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
-  100% {
-    transform: translateY(-86px) scale(0);
+  to {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
   }
 }
 
@@ -459,23 +442,11 @@ a {
 
   width: 568px;
   position: absolute;
-  top: 86px;
-  left: 0;
-  z-index: 3;
+  top: 0;
+  left: 316px;
+  z-index: 2;
   display: block;
 }
-
-.floatUp {
-  animation-name: floatUp;
-  animation-duration: 2s;
-  z-index: 3;
-}
-
-.floatDown {
-  animation-name: floatDown;
-  animation-duration: 2s;
-}
-
 
 .search-form {
   padding: 55px;
@@ -484,6 +455,7 @@ a {
 .search-form p {
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 24px;
 }
 
 .search-form input {
@@ -599,26 +571,56 @@ a {
   border: 1px solid #E5E5E5;
 }
 
+.btn {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #FFFFFF;
+  word-wrap: break-word;
 
-.map {
-  width: 1200px;
-  height: 597px;
+  display: block;
 }
 
-.map p {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
+.btn-brown {
+  background-color: #766357;
 
-  margin: 0;
+  width: 568px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: 0 auto;
 }
 
-.map iframe {
-  position: relative;
-  z-index: 2;
+.btn-brown:hover,
+.btn-brown:focus {
+  background-color: #604E43;
+}
 
-  border: none;
+.btn-brown:active {
+  background-color: #503E33;
+  color: #847870;
+}
+
+
+.btn-blue {
+  background-color: #81B3D2;
+
+  width: 458px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin: 25px auto 0;
+  margin-bottom: 0;
+}
+
+.btn-blue:hover,
+.btn-blue:focus {
+  background-color: #669EC0;
+}
+
+.btn-blue:active {
+  background-color: #5496BD;
+  color: #87B5D0;
 }
 
 /* Footer
