--- a/css/style.css
+++ b/css/style.css
@@ -385,21 +385,12 @@ a {
   width: 1200px;
   height: 597px;
   position: relative;
-}
-
-.map img {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-
-  margin: 0;
+  background: url(../img/map.jpg) center no-repeat;
 }
 
 .map iframe {
   position: relative;
-  z-index: 2;
-
+  z-index: 1;
   border: none;
 }
 
