--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,13 @@ a {
   z-index: 1;
 }
 
+.header a:hover,
+.header a:focus,
+.header a:active {
+  outline: inherit;
+}
+
+
 .site-nav a {
   color: #000000;
 }
@@ -116,10 +123,12 @@ a {
 .site-nav a:hover,
 .site-nav a:focus {
   color: #81B3D2;
+  outline: none;
 }
 
 .site-nav a:active {
   color: #B2B2B2;
+  outline: none;
 }
 
 .site-nav .current-link {
@@ -431,6 +440,7 @@ a {
 }
 
 @keyframes shake {
+
   0%,
   100% {
     -webkit-transform: translateX(0);
@@ -456,7 +466,7 @@ a {
 }
 
 .error {
-animation: shake 0.5s;
+  animation: shake 0.5s;
 }
 
 .modal-search {
@@ -854,13 +864,12 @@ fieldset {
   height: 23px;
 }
 
-/*
+
 .checkbox:hover+label::before,
 .checkbox:focus+label::before,
 .checkbox:active+label::before {
   outline: 3px solid rgb(59, 153, 252);
 }
-*/
 
 .filter-price-box {
   border: 2px solid #FFFFFF;
@@ -1115,7 +1124,7 @@ a.sorting-icon-current path {
   flex-wrap: wrap;
 
   padding-top: 30px;
-  padding-bottom: 24px;
+  padding-bottom: 30px;
   padding-right: 72px;
   padding-left: 72px;
 
@@ -1125,6 +1134,12 @@ a.sorting-icon-current path {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+}
+
+.img-link {
+  width: 135px;
+  height: 90px;
+  margin-right: 30px;
 }
 
 .catalog-row {
@@ -1150,7 +1165,9 @@ a.sorting-icon-current path {
 
 .catalog-img {
   background-color: #81B3D2;
-  margin-right: 30px;
+
+  width: 135px;
+  height: 90px;
 }
 
 .catalog-item p {
