--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ a {
   line-height: 26px;
   font-size: 14px;
 
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .site-nav {
@@ -105,7 +105,7 @@ a {
 .logo {
   position: absolute;
   top: 0;
-  left: 531px;
+  left: 532px;
   z-index: 1;
 }
 
@@ -148,14 +148,14 @@ a {
   background-image: url("../img/intro-mask.svg"),
     url("../img/background.jpg");
   background-repeat: no-repeat;
-  background-position: 0 454px, 0 -56px;
+  background-position: 0 452px, 0 -56px;
 
   width: 1200px;
   min-height: 724px;
 }
 
 .intro-img {
-  margin: 78px 0;
+  margin: 76px 0;
   margin-bottom: 75px;
 }
 
@@ -179,7 +179,7 @@ a {
 .box .title {
   line-height: 26px;
 
-  padding-top: 60px;
+  padding-top: 61px;
   padding-bottom: 0;
 }
 
@@ -191,14 +191,14 @@ a {
 
   margin-bottom: 0;
   margin-top: 0;
-  padding-top: 25px;
+  padding-top: 26px;
 }
 
 .box .text {
   line-height: 26px;
 
   padding-bottom: 48px;
-  word-spacing: 1px;
+  padding-top: 26px;
 }
 
 .title-white,
@@ -208,6 +208,10 @@ a {
 
   display: block;
   width: 310px;
+}
+
+.text-white {
+  padding-top: 20px;
 }
 
 .title-white {
@@ -241,10 +245,11 @@ a {
 .feature-text-white {
   width: 400px;
 
-  padding-left: 45px;
-  padding-right: 45px;
-  padding-top: 44px;
-  padding-bottom: 50px;
+  padding: 45px;
+}
+
+.feature-text-white span {
+  line-height: 0;
 }
 
 .features-list-one {
@@ -257,7 +262,7 @@ a {
   align-items: center;
   flex-wrap: wrap;
 
-  padding-top: 54px;
+  padding-top: 55px;
   padding-bottom: 75px;
 }
 
@@ -278,9 +283,9 @@ a {
 }
 
 .feature-item-one .title {
-  padding-top: 31px;
+  padding-top: 33px;
   padding-bottom: 0;
-  margin-top: 76px;
+  margin-top: 75px;
 
   position: relative;
 }
@@ -321,7 +326,7 @@ a {
 
   width: 1200px;
 
-  padding: 50px 72px;
+  padding: 47px 72px;
   padding-bottom: 55px;
   background-color: #EEEEEE;
 
@@ -342,7 +347,7 @@ a {
 }
 
 .feature-item-grey li:nth-child(3) {
-  width: 259px;
+  width: 254px;
 }
 
 .feature-item-grey .title {
@@ -352,7 +357,7 @@ a {
 }
 
 .feature-item-grey .text {
-  padding-top: 23px;
+  padding-top: 24px;
 }
 
 /* Search */
@@ -365,8 +370,8 @@ a {
 }
 
 .search-text {
-  padding-top: 60px;
-  padding-bottom: 48px;
+  padding-top: 59px;
+  padding-bottom: 43px;
 }
 
 .search strong {
@@ -377,12 +382,13 @@ a {
 
 .search p {
   font-size: 14px;
+  line-height: 24px;
   font-weight: 400;
   color: #333333;
 
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 30px;
+  padding-top: 28px;
 }
 
 .search-box {
@@ -473,7 +479,6 @@ a {
   font-size: 14px;
   color: #000000;
   font-weight: 700;
-  line-height: 26px;
 
   background-color: #FFFFFF;
 
@@ -487,6 +492,7 @@ a {
 
 .search-form {
   padding: 55px;
+  padding-left: 56px;
 }
 
 .search-form p {
@@ -507,7 +513,7 @@ a {
 }
 
 .date {
-  margin-bottom: 30px;
+  margin-bottom: 29px;
 
   position: relative;
   display: flex;
@@ -554,6 +560,40 @@ a {
   text-align: center;
 }
 
+.minus::before,
+.plus::before,
+.plus::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 12px;
+  height: 3px;
+  background-color: #A9A9A9;;
+  z-index: 2;
+  top: 18px;
+  right: 14px;
+}
+
+.plus::after {
+  transform: rotate(90deg);
+}
+
+.btn-count:hover .minus::before,
+.btn-count:hover .plus::before,
+.btn-count:hover .plus::after,
+.btn-count:focus .minus::before,
+.btn-count:focus .plus::before,
+.btn-count:focus .plus::after {
+  background-color: #000000;
+}
+
+.btn-count:active .minus::before,
+.btn-count:active .plus::before,
+.btn-count:active .plus::after{
+  background-color: #87B5D0;
+}
+
+
 .search-form input:hover,
 .search-form input:focus {
   background-color: #EBEBEB;
@@ -576,6 +616,7 @@ a {
   bottom: 0;
   right: 0;
   z-index: 1;
+
 }
 
 .btn-calend:hover,
@@ -589,23 +630,11 @@ a {
 
 .btn-count {
   background-color: #F2F2F2;
-  color: #A9A9A9;
-  font-size: 20px;
-  font-weight: 700;
 
   width: 38px;
   height: 38px;
   border: none;
-}
-
-.btn-count:hover,
-.btn-count:focus {
-  color: #000000;
-}
-
-.btn-count:active {
-  color: #87B5D0;
-  border: 1px solid #E5E5E5;
+  position: relative;
 }
 
 .btn {
@@ -644,9 +673,9 @@ a {
   background-color: #81B3D2;
 
   width: 458px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  margin: 25px auto 0;
+  padding-top: 19px;
+  padding-bottom: 13px;
+  margin: 28px auto 0;
   margin-bottom: 0;
 }
 
