--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a {
   line-height: 26px;
   font-size: 14px;
 
-  padding-top: 15px;
+  padding-top: 14px;
   padding-bottom: 15px;
 }
 
@@ -87,7 +87,7 @@ a {
 
 .site-nav li:nth-child(2),
 .site-nav li:nth-child(4n+2) {
-  padding-left: 12px;
+  padding-left: 14px;
 }
 
 .site-nav li:nth-child(4n-1),
@@ -96,7 +96,7 @@ a {
 }
 
 .site-nav li:nth-child(4n-1) {
-  padding-right: 17px;
+  padding-right: 15px;
 }
 
 .site-nav li:nth-child(4n) {
@@ -156,8 +156,8 @@ a {
 }
 
 .intro-img {
-  margin: 76px 0;
-  margin-bottom: 75px;
+  margin: 77px 0;
+  margin-bottom: 74px;
 }
 
 .box {
@@ -180,7 +180,7 @@ a {
 .box .title {
   line-height: 26px;
 
-  padding-top: 61px;
+  padding-top: 59px;
   padding-bottom: 0;
 }
 
@@ -192,13 +192,12 @@ a {
 
   margin-bottom: 0;
   margin-top: 0;
-  padding-top: 26px;
+  padding-top: 24px;
 }
 
 .box .text {
   line-height: 26px;
 
-  padding-bottom: 48px;
   padding-top: 26px;
 }
 
@@ -208,17 +207,18 @@ a {
   text-align: center;
 
   display: block;
-  width: 310px;
+  width: 311px;
 }
 
 .text-white {
-  padding-top: 20px;
+  padding-top: 21px;
 }
 
 .title-white {
   padding-left: 80px;
   padding-right: 80px;
   margin-top: 0;
+  padding-bottom: 25px;
 }
 
 .feature-item {
@@ -249,9 +249,6 @@ a {
   padding: 45px;
 }
 
-.feature-text-white span {
-  line-height: 0;
-}
 
 .features-list-one {
   background-color: #FFFFFF;
@@ -264,7 +261,7 @@ a {
   flex-wrap: wrap;
 
   padding-top: 55px;
-  padding-bottom: 75px;
+  padding-bottom: 81px;
 }
 
 .features-list-one li {
@@ -284,7 +281,7 @@ a {
 }
 
 .feature-item-one .title {
-  padding-top: 33px;
+  padding-top: 29px;
   padding-bottom: 0;
   margin-top: 75px;
 
@@ -300,7 +297,7 @@ a {
   display: block;
   background-repeat: no-repeat;
   background-position: center;
-  bottom: 52px;
+  bottom: 49px;
   left: 50%;
   margin-left: -39px;
   z-index: 1;
@@ -328,7 +325,7 @@ a {
   width: 1200px;
 
   padding: 47px 72px;
-  padding-bottom: 55px;
+  padding-bottom: 59px;
   background-color: #EEEEEE;
 
   position: relative;
@@ -354,11 +351,11 @@ a {
 .feature-item-grey .title {
   width: 140px;
   margin: 0 auto;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
 }
 
 .feature-item-grey .text {
-  padding-top: 24px;
+  padding-top: 21px;
 }
 
 /* Search */
@@ -371,8 +368,8 @@ a {
 }
 
 .search-text {
-  padding-top: 59px;
-  padding-bottom: 43px;
+  padding-top: 57px;
+  padding-bottom: 45px;
 }
 
 .search strong {
@@ -389,7 +386,7 @@ a {
 
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 28px;
+  padding-top: 25px;
 }
 
 .search-box {
@@ -656,7 +653,7 @@ a {
 
   width: 568px;
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 28px;
   margin: 0 auto;
 }
 
@@ -709,20 +706,16 @@ footer {
   flex-wrap: wrap;
   width: 1200px;
 
-  padding-left: 143px;
-  padding-right: 101px;
-  padding-top: 36px;
-  padding-bottom: 34px;
+  padding-left: 125px;
+  padding-right: 100px;
+  padding-top: 28px;
+  padding-bottom: 32px;
 
 }
 
 .footer-catalog {
   padding-top: 26px;
   padding-left: 130px;
-}
-
-.catalog-tel {
-  line-height: 45px;
 }
 
 .footer {
@@ -737,6 +730,10 @@ footer p {
   margin-bottom: 0;
 }
 
+.footer-contacts {
+  line-height: 32px;
+}
+
 .footer-contacts a {
   text-decoration: none;
   color: #000000;
@@ -746,7 +743,7 @@ footer p {
   display: flex;
   flex-direction: row;
 
-  padding-right: 70px;
+  padding-right: 53px;
   max-width: 400px;
   flex-wrap: wrap;
 
@@ -772,6 +769,7 @@ footer p {
   height: 48px;
   margin-right: 6px;
   margin-bottom: 7px;
+  margin-top: 7px;
   flex-shrink: 0;
 }
 
@@ -807,7 +805,8 @@ footer p {
 }
 
 .academy {
-  margin-left: 5px;
+  margin-left: 7px;
+  padding-top: 7px;
 }
 
 .academy:hover path,
